test/parser/function_def.error.1.err
EXPECTED_END_OF_PARAMETER_LIST[1019] in test/parser/function_def.error.1.pytch, line 1, character 19:
Error: I was expecting a ',' or ')' after the previous parameter.
   +-------------------------------------------------------------------+
   | test/parser/function_def.error.1.pytch                            |
 1 | let print_fst(x, y =                                              |
   |                   ^ Error: I was expecting a ',' or ')' after the |
   | previous parameter.                                               |
 2 |   print(x)                                                        |
   +-------------------------------------------------------------------+
